[package]
name = "cldj"
version = "0.1.0"
authors = ["joshua postel <jpostel1@ford.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9.5"
termion = "1.5.5"
num-complex = "0.2.4"


[dev-dependencies]
criterion = "0.3"

# [lib]
# bench = false

[[bench]]
name = "my_fourier"
harness = false
